--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 
         <div class="container" style="display: flex; justify-content: center;">
             <div class="recommendations" style="width: 100%; text-align: center;">
-                <p style="font-family: 'Lobster', cursive; font-style: normal; font-weight: 400; font-size: 26px; color: #767676;">25 de Noviembre de 2023</p>
+                <p style="font-family: 'Lobster', cursive; font-style: normal; font-weight: 400; font-size: 26px; color: #767676;">25 de Agosto de 2023</p>
                 <h4 style="color: #ddaf36; font-family: 'Arial', sans-serif; font-size: 21px; font-weight: normal;">
                     F  A  L  T  A  N
                 </h4>
@@ -788,7 +788,7 @@
                             <p style="margin: 0;">Villanueva - Santander</p>
                             <br />
                             <div style="display: flex; justify-content: center; margin-top:5px;">
-                                <button>3:00 PM</button>
+                                <button>4:00 PM</button>
                                 <a href="https://maps.app.goo.gl/m8XaZU6xkEsAkE8K7" target="_blank">Cómo Llegar</a>
                             </div>
                             <br />
@@ -807,13 +807,12 @@
 
                             <p style="font-family: 'Lobster', cursive; font-style: normal; font-weight: 400; font-size: 36px; color: #ddaf36;">Recepción</p>
                             <img src="copas.png" alt="copas">
-                            <p style="margin: 0;">Cabañas la semilla</p>
-                            <p style="margin: 0;">Vereda Agua Fría</p>
+                            <p style="margin: 0;">Las Vegas</p>
                             <p style="margin: 0;">Villanueva - Santander</p>
                             <br />
                             <div style="display: flex; justify-content: center;">
                                 <button>6:00 PM</button>
-                                <a href="https://maps.app.goo.gl/Y4DgxALxZ7HgAtnJ9" target="_blank">Cómo Llegar</a>
+                                <a href="https://maps.app.goo.gl/HE5gWZU83eU4b7JE7" target="_blank">Cómo Llegar</a>
                             </div>
                             <br />
                         </div>
@@ -823,36 +822,36 @@
 
         </div>
         <br />
-        
-        <div class="confirm-wrappertwo" style="background-color: rgba(104, 132, 156, 0.8); width: 100%;">
-            <div style="width: 100%; ">
-                <br /><br /><br />
-                <img src="camerapic.png" alt="copas" class="responsive-image">
-                <div>
-                    <i class="material-icons" style="transform: rotateY(180deg);font-size: 40px; color:white; vertical-align: middle;">trending_flat</i>
+        <!--
+    <div class="confirm-wrappertwo" style="background-color: rgba(104, 132, 156, 0.8); width: 100%;">
+        <div style="width: 100%; ">
+            <br /><br /><br />
+            <img src="camerapic.png" alt="copas" class="responsive-image">
+            <div>
+                <i class="material-icons" style="transform: rotateY(180deg);font-size: 40px; color:white; vertical-align: middle;">trending_flat</i>
 
-                    <span style="color:white;vertical-align: middle;">Desliza para ver todas las fotos</span>
+                <span style="color:white;vertical-align: middle;">Desliza para ver todas las fotos</span>
 
-                    <i class="material-icons" style=" font-size: 40px; color:white; vertical-align: middle;">trending_flat</i>
+                <i class="material-icons" style=" font-size: 40px; color:white; vertical-align: middle;">trending_flat</i>
 
 
 
-                </div>
-                <div class="mygallery-wrapper">
-                    <div class="mygallery">
-                        <img src="nosotros.jpeg" alt="copas">
-                        <img src="nosotros.jpeg" alt="copas">
-                        <img src="nosotros.jpeg" alt="copas">
-                        <img src="nosotros.jpeg" alt="copas">
-                        <img src="nosotros.jpeg" alt="copas">
-                        <img src="nosotros.jpeg" alt="copas">
+            </div>
+            <div class="mygallery-wrapper">
+                <div class="mygallery">
+                    <img src="nosotros.jpeg" alt="copas">
+                    <img src="nosotros.jpeg" alt="copas">
+                    <img src="nosotros.jpeg" alt="copas">
+                    <img src="nosotros.jpeg" alt="copas">
+                    <img src="nosotros.jpeg" alt="copas">
+                    <img src="nosotros.jpeg" alt="copas">
 
-                    </div>
                 </div>
             </div>
-            <br />
         </div>
-
+        <br />
+    </div>
+        -->
         <br /><br />
 
         <p style="font-family: 'Lobster', cursive; font-style: normal; font-weight: 400; font-size: 36px; color: #ddaf36;">Lluvia de sobres</p>
@@ -903,7 +902,7 @@
 
         <script>
             // Fecha de la boda
-            var weddingDate = new Date("November 25, 2023 15:00:00").getTime();
+            var weddingDate = new Date("August 25, 2023 16:00:00").getTime();
 
             // Actualizar el contador cada segundo
             var countdownInterval = setInterval(function () {
