--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
             <div class="confirm-buttons">
                 <button onclick="redirectToWhatsApp()" style="background-color: #ddaf36;">
                     <img src="whatsapp.png" alt="Icono de WhatsApp" style="margin-right: 5px; vertical-align: middle;">
-                    <span style="vertical-align: middle;">Mesh</span>
+                    <span style="vertical-align: middle;">María</span>
                 </button>
 
                 <button onclick="redirectToWhatsApp2()" style="background-color: #ddaf36;">
@@ -883,12 +883,12 @@
         </div>
         <script>
             function redirectToWhatsApp() {
-                var message = encodeURIComponent("¡Confirmo mi asistencia!");
+                var message = encodeURIComponent("¡Hola, Te escribo para confirmar mi asistencia a tu matrimonio!");
                 var url = "https://wa.me/+573154758332?text=" + message;
                 window.open(url, "_blank");
             }
             function redirectToWhatsApp2() {
-                var message = encodeURIComponent("¡Confirmo mi asistencia!");
+                var message = encodeURIComponent("¡Hola, Te escribo para confirmar mi asistencia a tu matrimonio!");
                 var url = "https://wa.me/+573108839586?text=" + message;
                 window.open(url, "_blank");
             }
