--- a/index.html
+++ b/index.html
@@ -874,12 +874,12 @@
 
                 <button onclick="redirectToWhatsApp2()" style="background-color: #ddaf36;">
                     <img src="whatsapp.png" alt="Icono de WhatsApp" style="margin-right: 5px; vertical-align: middle;">
-                    <span style="vertical-align: middle;">Pipe</span>
+                    <span style="vertical-align: middle;">Andrés</span>
                 </button>
             </div>
             <p class="confirm-message">¡Te esperamos!.</p>
             <br />
-            <p style="font-family: 'Arizonia', cursive; font-size: 30px;" class="hashtag">#BodaMesh&Pipe</p>
+            <p style="font-family: 'Arizonia', cursive; font-size: 30px;" class="hashtag">#BodaMaría&Andrés</p>
         </div>
         <script>
             function redirectToWhatsApp() {
